# uk-school-data

./: LICENSE  pyproject.toml
.github/workflows/: edubase.yml  ofsted.yml
data/england/schools/: school-links.csv
