[tool.poetry]
name = "UK school data scripts"
version = "0.1.0"
description = ""
authors = ["MikeT <mikejamesthompson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
